# adventOfCode

./: AdventOfCode.cabal
app/: Main.hs
src/: AdventOfCode.hs
src/AdventOfCode/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs
src/AdventOfCode/Command/: All.hs  Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Utils.hs
