Name: AdventOfCode
Version: 0.0.1
Cabal-Version: >=1.10
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2015 Ian O Connell
Author: Ian O Connell
Maintainer: hs@ianoc.net
Bug-Reports: https://github.com/ianoc/adventOfCode/issues
Synopsis: Solutions to adventofcode.com problems
Description: Solutions to adventofcode.com problems
Source-Repository head
    Type: git
    Location: https://github.com/ianoc/adventOfCode

Library
    HS-Source-Dirs: src
    Build-Depends:
        base                   >= 4.5
        , text                  < 1.3
        , optparse-applicative >= 0.11
        , split                >= 0.2.0
        , mtl                  >= 2.2.0
        , system-filepath >= 0.4.0.0
        , lens
        , bytestring
        , MissingH
        , turtle
        , containers >= 0.5.6
        , attoparsec
        , deepseq
    Exposed-Modules:
        AdventOfCode
      , AdventOfCode.Command.All
    Other-Modules:
        AdventOfCode.Command.Utils
      , AdventOfCode.Command.Day1
      , AdventOfCode.Day1
    GHC-Options: -O2 -Wall
    Default-Language: Haskell2010


executable adventOfCode
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , AdventOfCode
  default-language:    Haskell2010
